Version 2.02.57 -
====================================
  Add capability to split off and keep mirror legs to lvconvert.
  Change background polldaemon's process name to "(lvm2)".
  Allow vgremove of a VG with PVs missing.
  Keep log type consistent when changing mirror image count.
  Always set environment variables for an LVM2 device in 11-dm-lvm.rules.
  Add activation/udev_rules config option in lvm.conf.
  Add macro outfc() and export out_text_with_comment().
  Add macros outsize() and outhint().
  Use offsetof() macro for FIELD() macro in lib/report/report.c.
  Rename mirror_device_fault_policy to mirror_image_fault policy.
  Remove empty PV devices if lvconvert --repair is using defined policies.
  Use fixed buffer to prevent stack overflow in persistent filter dump.
  Use snapshot metadata usage to determine if a snapshot is empty.
  Insert missing stack macros to all activate_lv and deactivate_lv callers.
  Insert missing stack macros to all suspend_lv and resume_lv callers.
  Add --poll flag to vgchange and lvchange.
  Propagate commit and revert metadata notification to other nodes in cluster.
  Use proper mask for VG lock mode in clvmd.
  Add possibility to drop precommitted metadata in lvmcache.
  Move processing of VG locks to separate function in clvmd.
  Properly decode flags even for VG locks.
  Properly handle precommitted flag in cache when commited data only present.
  Resume renamed volumes in reverse order to preserve memlock pairing.
  Drop metadata cache after device was autorepaired and removed from VG.
  Remove missing flag in metadata if PV reappeared and is empty.
  Destroy allocated mempool in _vg_read_orphans() error path.
  Fix unlocking vg in some pvresize and toollib error paths.
  Explicitly call suspend for temporary mirror layer.
  Allow use precommited metadata when a PV is missing.
  Add memlock information to do_lock_lv debug output.
  Never use distributed lock for LV in non-clustered VG.